cc_binary(
    name = "server", 
    srcs = [
        "node.hh",
        "directory.hh",
        "server.cc",
    ], 
    copts = [
        "-std=c++20",
    ],
)

cc_test(
    name = "db", 
    srcs = [
        "main.cc",
        "node.hh",
        "directory.hh",
    ], 
    copts = [
        "-std=c++20",
    ],
)

cc_binary(
    name = "remote", 
    srcs = [
        "ut_await.cc",
        "node.hh",
        "directory.hh",
    ], 
    copts = [
        "-std=c++20",
    ],
    linkopts = [
        "-lboost_serialization",
        "-lboost_cobalt",
        "-L/usr/local/lib",
    ],
)

cc_binary(
    name = "fuse", 
    srcs = [
        "fuse.c",
    ], 
    copts = [
        "-D_FILE_OFFSET_BITS=64",
    ],
    linkopts = [
        "-lfuse",
    ],
)

cc_binary(
    name = "echo", 
    srcs = [
        "echo_server.cc",
    ], 
    copts = [
        "-std=c++20",
    ],
    linkopts = [
        # "-lfuse",
    ],
)
