# cc_binary(
#     name = "server", 
#     srcs = [
#         "node.hh",
#         "directory.hh",
#         "server.cc",
#     ], 
#     copts = [
#         "-std=c++20",
#     ],
# )

# cc_test(
#     name = "db", 
#     srcs = [
#         "main.cc",
#         "node.hh",
#         "directory.hh",
#     ], 
#     copts = [
#         "-std=c++20",
#     ],
# )

cc_test(
    name = "file_ut", 
    srcs = [
        "file_ut.cc",
        "file.hh",
    ], 
    copts = [
        "-std=c++20",
    ],
    linkopts = [
        "-lboost_serialization",
        "-lboost_cobalt",
        "-L/usr/local/lib",
    ],
    env = {
        "LD_LIBRARY_PATH": "/usr/local/lib",
    },
)

cc_test(
    name = "replica", 
    srcs = [
        "ut_replica.cc",
        "compile_ut.hh",
        "node.hh",
        "directory.hh",
        "cluster.hh"
    ], 
    copts = [
        "-std=c++20",
    ],
    linkopts = [
        "-lboost_serialization",
        "-lboost_cobalt",
        "-L/usr/local/lib",
    ],
    env = {
        "LD_LIBRARY_PATH": "/usr/local/lib",
    },
)

cc_test(
    name = "remote", 
    srcs = [
        "ut.cc",
        "compile_ut.hh",
        "node.hh",
        "directory.hh",
        "cluster.hh"
    ], 
    copts = [
        "-std=c++20",
    ],
    linkopts = [
        "-lboost_serialization",
        "-lboost_cobalt",
        "-L/usr/local/lib",
    ],
    env = {
        "LD_LIBRARY_PATH": "/usr/local/lib",
    },
)

cc_binary(
    name = "fuse", 
    srcs = [
        "fuse.c",
    ], 
    copts = [
        "-D_FILE_OFFSET_BITS=64",
    ],
    linkopts = [
        "-lfuse",
    ],
)

# cc_binary(
#     name = "echo", 
#     srcs = [
#         "echo_server.cc",
#     ], 
#     copts = [
#         "-std=c++20",
#     ],
#     linkopts = [
#         # "-lfuse",
#     ],
# )
